# preparedness

./: CLAUDE.md  DAYTONA_INTEGRATION_SPEC.md  README.md  daytona-llms.txt
.devcontainer/: devcontainer.json
project/nanoeval_daytona/: .env.example  README.md  pyproject.toml  test.py
project/nanoeval_daytona/nanoeval_daytona/: __init__.py  daytona_computer_interface.py  task_to_daytona_config.py
project/nanoeval_daytona/tests/: __init__.py  test_daytona_interface.py
